# ZynerjiQuantumCompiler

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
cpp/: CMakeLists.txt
cpp/src/: bindings.cpp  lap_solver.cpp  spectral_engine.cpp
paper/: whitepaper.tex
scripts/: bench_large_qft.py  compare_qiskit.py  run_bench.py  run_sweep.py
tests/: test_dual_helix.py  test_interaction_graph.py  test_passes.py  test_pipeline.py  test_spectral_match.py
zynerji_qc/: __init__.py  bench.py  pipeline.py  sweep.py
zynerji_qc/core/: __init__.py  dual_helix.py  hardware_graph.py  interaction_graph.py  spectral_match.py
zynerji_qc/passes/: __init__.py  helix_layout.py  helix_routing.py
