[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "zynerji-quantum-compiler"
version = "0.1.0"
description = "Spectral graph matching for quantum circuit compilation using Dual-Helix Laplacians"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "qiskit>=1.0,<2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-xdist",
]

[tool.flit.module]
name = "zynerji_qc"

[tool.pytest.ini_options]
testpaths = ["tests"]
